--- a/index.html
+++ b/index.html
@@ -14,25 +14,25 @@
 
         <nav class="navbar">
             <a href="#" style="--i:1;"  class="active">Home</a>
-            <a href="#" style="--i:2;">About</a>
-            <a href="#" style="--i:3;">Skills</a>
-            <a href="#" style="--i:4;">Portfolio</a>
-            <a href="#" style="--i:5;">Contact</a>
+            <a href="about.html" style="--i:2;">About</a>
+            <a href="skills.html" style="--i:3;">Skills</a>
+            <a href="portfolio.html" style="--i:4;">Portfolio</a>
+            <a href="contact.html" style="--i:5;">Contact</a>
         </nav>
     </header>
     <section class="home">
         <div class="home-content">
             <h3>Hello, It's Me</h3>
-            <h1>Adem Ben Ali</h1>
+            <h1>Ben Ali Adem</h1>
             <h3>And I'm a <span class="multiple-text"></span></h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque soluta odit laudantium mollitia obcaecati enim doloribus blanditiis distinctio, molestiae officiis doloremque. Voluptatum dolorem excepturi explicabo suscipit sapiente architecto velit quam.</p>
             <div class="social-media">
-                <a href="#" style="--i:7;"><i class='bx bxl-facebook'></i></a>
-                <a href="#" style="--i:8;"><i class='bx bxl-instagram' ></i></a>
-                <a href="#" style="--i:9;"><i class='bx bxl-twitter' ></i></a>
-                <a href="#" style="--i:10;"><i class='bx bxl-linkedin' ></i></a>
+                <a href="https://www.facebook.com/benali.adem.50" style="--i:7;"><i class='bx bxl-facebook'></i></a>
+                <a href="https://www.instagram.com/adem_ben_aliii/" style="--i:8;"><i class='bx bxl-instagram' ></i></a>
+                <a href="https://github.com/AdemBenAli" style="--i:9;"><i class='bx bxl-github'></i></i></a>
+                <a href="https://www.linkedin.com/in/ben-ali-adem-4535142b9/" style="--i:10;"><i class='bx bxl-linkedin' ></i></a>
             </div>
-            <a href="#" class="btn">Download CV</a>
+            <a href="#" class="btn">For Work</a>
         </div>
         <div class="home-img">
             <img src="profile-pic.png" alt="">
