--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 
         
     </section>
-    <form action="https://formsubmit.co/adembenali2004@email.com" method="post">
+    <form action="https://formsubmit.co/adembenali2004@gmail.com" method="post">
     <div class="inp">
         
         <input type="text" id="name" name="name" class="i1" placeholder="Name"  required>
