--- a/contact.html
+++ b/contact.html
@@ -39,8 +39,10 @@
         <input type="text" id="subject" name="subject" class="i4" placeholder="Subject" required>
 
         <textarea id="message" name="message" class="i5" placeholder="Your Message" required></textarea>
+        
+        <input type="hidden" name="_captcha" value="false">
 
-        <input type="hidden" name="_next" value="https://yourdomain.co/thanks.html">
+        <input type="hidden" name="_next" value="https://adembenali.github.io/portfolio/thanks.html">
 
         <input type="hidden" name="_template" value="table">
     
