--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,10 @@
 <head>
     <title>Portfolio</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <link rel="stylesheet" href="contact.css" />
+    <link rel="icon" type="image/png" href="profile-pic.png">
 </head>
 
 <body>
