--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
     <title>Portfolio</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" type="image/png" href="profile-pic.png">
 </head>
 
 <body>
@@ -13,7 +15,7 @@
         <a href="#" class="logo">Portfolio.</a>
 
         <nav class="navbar">
-            <a href="#" style="--i:1;"  class="active">Home</a>
+            <a href="home.html" style="--i:1;"  class="active">Home</a>
             <a href="about.html" style="--i:2;">About</a>
             <a href="skills.html" style="--i:3;">Skills</a>
             <a href="portfolio.html" style="--i:4;">Portfolio</a>
