--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="#" class="logo">Portfolio.</a>
 
         <nav class="navbar">
-            <a href="home.html" style="--i:1;"  class="active">Home</a>
+            <a href="index.html" style="--i:1;"  class="active">Home</a>
             <a href="about.html" style="--i:2;">About</a>
             <a href="skills.html" style="--i:3;">Skills</a>
             <a href="portfolio.html" style="--i:4;">Portfolio</a>
