--- a/portfolio.html
+++ b/portfolio.html
@@ -25,8 +25,18 @@
         <div class="home-content">
             <h1>Latest <span>Projects</span></h1>
         </div>
+
         
     </section>
+    <div class="img">
+        <img src="proj.jpg" alt="" style="--i:6;">
+        <img src="proj.jpg" alt="" style="--i:7;">
+        <img src="proj.jpg" alt="" style="--i:8;">
+        <br>
+        <img src="proj.jpg" alt="" style="--i:9;">
+        <img src="proj.jpg" alt="" style="--i:10;">
+        <img src="proj.jpg" alt="" style="--i:11;">
+    </div>
 </body>
 
 </html>
