--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
     </header>
     <section class="home">
         <div class="home-content">
-            <h1>My <span>Skills</span></h1>
+            <h1>Our <span>Services</span></h1>
         </div>
 
         
